--- a/index.html
+++ b/index.html
@@ -1,27 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="static/css/style.css">
-
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="static/css/style.css">
 </head>
-<body>
+<body class="bg-dark">
     <div class="wrapper">
-        <nav class="navbar navbar-expand-lg">
+        <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
             <a class="navbar-brand" href="index.html">UFO Sightings</a>
         </nav>
-    </div>    
+
     <div class="jumbotron">
-        <h1>The Truth Is Out There</h1>
+        <h1 class="display-4">The Truth is Out There</h1>
     </div>
     <div class="container-fluid">
         <div class="row">
@@ -40,41 +33,63 @@
       <div class="container-fluid">
           <div class="row">
               <div class="col-md-3">
-
+                <form bg-dark>
+                    <p>Filter Search</p>
+                    <ul bg-dark>
+                      <li class="list-group-item bg-dark">
+                        <!--date-->
+                        <label for="date">Enter Date</label>
+                        <!--filter by datetime id-->
+                        <input type="text" placeholder="1/10/2010" id="datetime" />
+                    </li>
+                    <li class="list-group-item bg-dark">
+                        <!--city-->
+                        <label for="city">Enter City</label>
+                        <!--filter by city id-->
+                        <input type="text" placeholder="madison" id="city" />
+                    </li>
+                    <li class="list-group-item bg-dark">
+                        <!--state-->
+                        <label for="state">Enter State</label>
+                        <!-- filter by state id-->
+                        <input type="text" placeholder="wi" id="state" />
+                    </li>
+                    <li class="list-group-item bg-dark">
+                        <!--country-->
+                        <label for="country">Enter Country</label>
+                        <!--filter by country id-->
+                        <input type="text" placeholder="us" id="country" />
+                    </li>
+                    <li class="list-group-item bg-dark">
+                        <!--shape-->
+                        <label for="shape">Enter Shape</label>
+                        <!--filter by shape id-->
+                        <input type="text" placeholder="ex: light, circle, triangle, unknown" id="shape" />
+                    </li>
+                    </ul>
+                </form>
               </div>
               <div class="col-md-9">
                 <table class="table table-striped">
-                    <thead>
-                        <th>Date</th>
-                        <th>City</th>
-                        <th>State</th>
-                        <th>Country</th>
-                        <th>Shape</th>
-                        <th>Duration</th>
-                        <th>Comments</th>
-                        <tr>
-                          <th></th>
-                        </tr>
-                      </thead>
-                      <tbody></tbody>
-                    </table>
-                  </div>
-                  <form>
-                      <p>Filter Search</p>
-                  </form>
-              </div>
-          </div>
-      </div>
-      <ul class="list-group">
+                        <thead>
+                            <tr>
+                            <th>Date</th>
+                            <th>City</th>
+                            <th>State</th>
+                            <th>Country</th>
+                            <th>Shape</th>
+                            <th>Duration</th>
+                            <th>Comments</th>
+                            </tr>
+                        </thead>
+                    <tbody></tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
+    <script src="static/js/data.js"></script>
+    <script src="static/js/app.js"></script>
 
-      </ul>
-      <li class="list-group-item">
-        <label for="date">Enter Date</label>
-        <input type="text" placeholder="1/10/2010" id=""datetime />
-      </li>
-      <li class="list-group-item">
-        <button id="filter-btn" type="button" class="btn btn-default">Filter Table</button>
-      </li>
-     
 </body>
 </html>
